[package]
name = "ads111x"
version = "0.1.0"
authors = ["martindeegan <mddeegan@gmail.com>"]
description = "ADS111X analog to digital converter driver."
license = "MIT/Apache-2.0"

[lib]
name = "ads111x"
path = "src/lib.rs"

[[bin]]
name = "ads111xbin"
path = "src/main.rs"

[dependencies]
i2cdev = "0.3.1"
byteorder = "1.1.0"



